--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
     <script data-cfasync="false">(function () { var el = document.documentElement, m = localStorage.getItem("doc_theme"), wm = window.matchMedia; if (m === "dark" || (!m && wm && wm("(prefers-color-scheme: dark)").matches)) { el.classList.add("dark") } else { el.classList.remove("dark") } })();</script>
 
-    <link href="retype.css" rel="stylesheet">
+    <link href="resources/css/retype.css?v=3.6.0.788891158524" rel="stylesheet">
 
-    <script data-cfasync="false" src="config.js" data-turbo-eval="false" defer></script>
-    <script data-cfasync="false" src="retype.js" data-turbo-eval="false" defer></script>
-    <script id="lunr-js" data-cfasync="false" src="lunr.js" data-turbo-eval="false" defer></script>
+    <script data-cfasync="false" src="resources/js/config.js?v=3.6.0.788891158524" data-turbo-eval="false" defer></script>
+    <script data-cfasync="false" src="resources/js/retype.js?v=3.6.0" data-turbo-eval="false" defer></script>
+    <script id="lunr-js" data-cfasync="false" src="resources/js/lunr.js?v=3.6.0.788891158524" data-turbo-eval="false" defer></script>
 </head>
 <body>
     <div id="docs-app" class="relative text-base antialiased text-gray-700 bg-white font-body dark:bg-dark-850 dark:text-dark-300">
